2008-09-21  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: |form=""| check support added.

2008-09-21  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: |contextmenu| validness is now checked using
	|id| and |id_type| properties, and |menu| property is removed.

2008-09-21  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Prepare for |form| |name| attribute's
	duplication checking.

2008-09-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_byte_stream): Support (or non-support) for
	unsupported charset="" parameter value (HTML5 revision 2131).

2008-09-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Reminding places where U+000B is allowed as a space
	character is fixed (cf. HTML5 revision 1738).

	* ContentChecker.pm, HTMLTable.pm: U+000B is no longer part of
	space characters (HTML5 revision 1738).

2008-09-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The "anything else" case for the "after after body"
	insertion mode was not updated to swtich to the "in body"
	insertion mode.  U+000B is no longer a space character for the
	purpose of tree construction phase (HTML5 revision 1738).

2008-09-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: U+000B is no longer a space character (HTML5
	revision 1738).

2008-09-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: 0x0B is no longer a space character (HTML5
	revision 1738).

	* HTML.pm.src: U+000B is no longer a space character for the
	algorithm for extracting an encoding from a Content-Type (HTML5
	revision 1738).

2008-09-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($IsInHTMLInteractiveContent): New.

2008-09-18  Wakaba  <wakaba@suika.fam.cx>

	* LangTag.pm: Add checks for remaining requirements from RFC 4646.

	* mklangreg.pl: Sort 'Prefix' values by their length, to ease
	matching.

2008-09-18  Wakaba  <wakaba@suika.fam.cx>

	* LangTag.pm: Warn for private use language subtags.  Error level
	typos fixed.  Support for Suppress-Script field.
