@@ -215,6 +215,7 @@ control character
 \u000b
 #errors
 no DOCTYPE
+U+000B
 #document escaped
 | <html>
 |   <head>
@@ -224,6 +225,7 @@ no DOCTYPE
 #data escaped
 \u000b
 #errors
+U+000B
 #document-fragment p escaped
 | "\u000b"
 
