@@ -1,7 +1,7 @@
 1..3105
 # Running under perl version 5.010000 for linux
-# Current time local: Sun Sep 21 19:00:53 2008
-# Current time GMT:   Sun Sep 21 10:00:53 2008
+# Current time local: Mon Sep 22 14:56:32 2008
+# Current time GMT:   Mon Sep 22 05:56:32 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
