@@ -7263,6 +7263,7 @@ no </listing>
 \u000b<p>
 #errors
 no DOCTYPE
+U+000B
 #document escaped
 | <html>
 |   <head>
@@ -7274,6 +7275,7 @@ no DOCTYPE
 \u000babc
 #errors
 no DOCTYPE
+U+000B
 #document escaped
 | <html>
 |   <head>
@@ -7283,6 +7285,7 @@ no DOCTYPE
 #data escaped
 <!DOCTYPE HTML>\u000b<p>
 #errors
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7294,6 +7297,7 @@ no DOCTYPE
 #data escaped
 <!DOCTYPE HTML>\u000babc
 #errors
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7304,6 +7308,7 @@ no DOCTYPE
 #data escaped
 <!DOCTYPE HTML><html>\u000b<p>
 #errors
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7315,6 +7320,7 @@ no DOCTYPE
 #data escaped
 <!DOCTYPE HTML><html>\u000babc
 #errors
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7325,6 +7331,7 @@ no DOCTYPE
 #data escaped
 <!DOCTYPE HTML><head>\u000b<p>
 #errors
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7336,6 +7343,7 @@ no DOCTYPE
 #data escaped
 <!DOCTYPE HTML><head>\u000babc
 #errors
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7346,6 +7354,7 @@ no DOCTYPE
 #data escaped
 <!DOCTYPE HTML><head></head>\u000b<p>
 #errors
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7357,6 +7366,7 @@ no DOCTYPE
 #data escaped
 <!DOCTYPE HTML><head></head>\u000babc
 #errors
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7368,6 +7378,7 @@ no DOCTYPE
 <!DOCTYPE HTML><head><noscript>\u000b<p>
 #errors
 no </noscript>
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7381,6 +7392,7 @@ no </noscript>
 <!DOCTYPE HTML><head><noscript>\u000babc
 #errors
 no </noscript>
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7394,6 +7406,7 @@ no </noscript>
 #errors
 char in table
 start tag in table
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7407,6 +7420,7 @@ start tag in table
 <!DOCTYPE HTML><table>\u000babc</table>
 #errors
 char in table
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7420,6 +7434,7 @@ char in table
 #errors
 char in table
 start tag in table
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7434,6 +7449,7 @@ start tag in table
 <!DOCTYPE HTML><table><colgroup>\u000babc</table>
 #errors
 char in table
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7447,6 +7463,7 @@ char in table
 <!DOCTYPE HTML><body></body>\u000b<p>
 #errors
 char after body
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7459,6 +7476,7 @@ char after body
 <!DOCTYPE HTML><body></body>\u000babc
 #errors
 char after body
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7471,6 +7489,7 @@ char after body
 #errors
 char in frameset
 start tag in frameset
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7481,6 +7500,7 @@ start tag in frameset
 <!DOCTYPE HTML><frameset>\u000babc</frameset>
 #errors
 char in frameset
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7492,6 +7512,7 @@ char in frameset
 #errors
 char after frameset
 tag after frameset
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7502,6 +7523,7 @@ tag after frameset
 <!DOCTYPE HTML><frameset>\u000babc</frameset>
 #errors
 char after frameset
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7512,6 +7534,7 @@ char after frameset
 <!DOCTYPE HTML><body></body></html>\u000b<p>
 #errors
 char after body html
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7524,6 +7547,7 @@ char after body html
 <!DOCTYPE HTML><body></body></html>\u000babc
 #errors
 char after body html
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7536,6 +7560,7 @@ char after body html
 #errors
 char after frameset html
 char after frameset html
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
@@ -7546,6 +7571,7 @@ char after frameset html
 <!DOCTYPE HTML><frameset></frameset></html>\u000babc
 #errors
 char after frameset html
+U+000B
 #document escaped
 | <!DOCTYPE HTML>
 | <html>
