@@ -1,5 +1,13 @@
 2008-09-22  Wakaba  <wakaba@suika.fam.cx>
 
+	* tokenizer-test-1.test: Test data on invalid character references
+	are added (cf. HTML5 revision 2138).
+
+	* tokenizer-test-2.dat: Test data on U+000B are updated (HTML5
+	revision 2138).
+
+2008-09-22  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-2.dat: Test data for |area| |alt=""| are added (HTML5
 	revision 1932).
 
